fixup z-index stacking on org page header

--- a/public/less/org-page.less
+++ b/public/less/org-page.less
@@ -52,6 +52,7 @@ body {
   padding: 0 4rem;
   height: 65px;
   background-image: linear-gradient(to left, @header-grad-bg-color, @header-base-bg-color);
+  z-index: 1;
 
   @media (max-width: @medium-breakpoint) {
     padding: .5em;
